--- a/dog-writer/frontend/package.json
+++ b/dog-writer/frontend/package.json
@@ -18,7 +18,8 @@
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
