--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -1,16 +1,19 @@
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
-google-generativeai==0.8.3
-anthropic==0.39.0
-openai==1.58.1
-python-dotenv==1.0.1
-pydantic==2.10.4
-python-multipart==0.0.19
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+
+# Optional AI integrations (when API keys are provided)
+openai==1.3.8
+anthropic==0.7.8
+google-generativeai==0.3.2
+
+# Additional utilities
+aiofiles==23.2.1
+jinja2==3.1.2
 
 # Security dependencies
-pyjwt==2.10.1
 bcrypt==4.2.1
-cryptography==44.0.0
 bleach==6.2.0
 
 # Development
