--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,9 +7,9 @@ nixPkgs = ['python311', 'python311Packages.pip']
 [phases.install]
 cmds = [
   'cd dog-writer/backend',
-  'python -m venv .venv',
-  '.venv/bin/pip install -r requirements.txt'
+  'python -m venv /tmp/venv',
+  '/tmp/venv/bin/pip install -r requirements.txt'
 ]
 
 [start]
-cmd = 'cd dog-writer/backend && .venv/bin/python -m uvicorn app:app --host 0.0.0.0 --port $PORT' 
+cmd = '/tmp/venv/bin/python -m uvicorn app:app --host 0.0.0.0 --port $PORT --app-dir /app/dog-writer/backend' 
