--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv==1.0.0
 openai==1.58.1
 anthropic==0.39.0
 google-generativeai==0.3.2
+httpx==0.27.0
 
 # Additional utilities
 aiofiles==23.2.1
