--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -18,6 +18,9 @@ jinja2==3.1.2
 bcrypt==4.2.1
 bleach==6.2.0
 
+# Grammar checking dependencies
+aiohttp==3.9.1
+
 # Development
 pytest==8.3.4
 pytest-asyncio==0.25.0 
