--- a/dog-writer/backend/railway.toml
+++ b/dog-writer/backend/railway.toml
@@ -4,7 +4,9 @@ builder = "nixpacks"
 [deploy]
 startCommand = "uvicorn app:app --host 0.0.0.0 --port 8000"
 healthcheckPath = "/api/health"
-healthcheckTimeout = 60
+healthcheckTimeout = 120
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
 
 [variables]
 RAILWAY_SERVICE_NAME = "owen-backend-fixed" 
