--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -1,8 +1,15 @@
+# Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
+
+# Authentication and Security
+PyJWT==2.8.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.1
+bleach==6.2.0
 
 # Optional AI integrations (when API keys are provided)
 openai==1.58.1
@@ -13,10 +20,6 @@ httpx==0.27.0
 # Additional utilities
 aiofiles==23.2.1
 jinja2==3.1.2
-
-# Security dependencies
-bcrypt==4.2.1
-bleach==6.2.0
 
 # Grammar checking dependencies
 aiohttp==3.9.1
