--- a/dog-writer/backend/railway.toml
+++ b/dog-writer/backend/railway.toml
@@ -2,11 +2,12 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "uvicorn app:app --host 0.0.0.0 --port 8000"
+startCommand = "uvicorn app:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 120
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [variables]
-RAILWAY_SERVICE_NAME = "owen-backend-fixed" 
+RAILWAY_SERVICE_NAME = "owen-backend-fixed"
+JWT_SECRET_KEY = "dummy-secret-key-for-now-please-change-me-later-for-real-security" 
