--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -10,6 +10,11 @@ PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.2.1
 bleach==6.2.0
+cryptography==41.0.8
+
+# Security and Rate Limiting
+slowapi==0.1.9
+redis==5.0.1
 
 # Optional AI integrations (when API keys are provided)
 openai==1.58.1
@@ -24,6 +29,10 @@ jinja2==3.1.2
 # Grammar checking dependencies
 aiohttp==3.9.1
 
-# Development
+# Development and Testing
 pytest==8.3.4
-pytest-asyncio==0.25.0 
+pytest-asyncio==0.25.0
+
+# Security scanning (development)
+bandit==1.7.5
+safety==2.3.5 
