--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -1,26 +1,34 @@
 # Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 
 # Authentication and Security
-PyJWT==2.8.0
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+PyJWT==2.8.0
 bcrypt==4.2.1
+cryptography>=3.4.8,<42.0.0
+
+# Input validation and sanitization
 bleach==6.2.0
-cryptography==41.0.8
 
 # Security and Rate Limiting
 slowapi==0.1.9
 redis==5.0.1
 
-# Optional AI integrations (when API keys are provided)
-openai==1.58.1
+# Security scanning tools
+bandit==1.7.5
+safety==2.3.5
+
+# HTTP requests
+requests==2.31.0
+
+# AI integrations (when API keys are provided)
+openai==1.3.7
 # anthropic==0.39.0  # TEMPORARILY COMMENTED OUT FOR DEPLOYMENT
 google-generativeai==0.3.2
-httpx==0.27.0
 
 # Additional utilities
 aiofiles==23.2.1
@@ -31,8 +39,4 @@ aiohttp==3.9.1
 
 # Development and Testing
 pytest==8.3.4
-pytest-asyncio==0.25.0
-
-# Security scanning (development)
-bandit==1.7.5
-safety==2.3.5 
+pytest-asyncio==0.25.0 
