--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -26,9 +26,9 @@ safety==2.3.5
 requests==2.31.0
 
 # AI integrations (when API keys are provided)
-openai==1.3.7
+openai>=1.35.0
 # anthropic==0.39.0  # TEMPORARILY COMMENTED OUT FOR DEPLOYMENT
-google-generativeai==0.3.2
+google-generativeai>=0.7.0
 
 # Additional utilities
 aiofiles==23.2.1
@@ -37,6 +37,26 @@ jinja2==3.1.2
 # Grammar checking dependencies
 aiohttp==3.9.1
 
+# Database Support (SQLite only for now - PostgreSQL can be added later)
+# SQLite (current) - keep for compatibility and development
+# Built-in with Python, no additional packages needed
+
+# PostgreSQL Support (commented out due to Python 3.13 compilation issues)
+# psycopg2-binary==2.9.9  # Enable when needed for PostgreSQL
+# sqlalchemy==2.0.23     # Enable for advanced ORM features if needed
+# alembic==1.13.1        # Enable for database migrations if needed
+
 # Development and Testing
 pytest==8.3.4
-pytest-asyncio==0.25.0 
+pytest-asyncio==0.25.0
+
+# Analytics and User Behavior Tracking (2025 Latest)
+posthog==4.10.0
+
+# Basic Text Analytics (Python 3.13 compatible)
+textblob==0.18.0
+vaderSentiment==3.3.2
+textstat==0.7.4
+
+# Performance Monitoring
+psutil==6.1.0 
