--- a/dog-writer/backend/railway.toml
+++ b/dog-writer/backend/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
-healthcheckPath = "/api/health"
+healthcheckPath = "/"
 healthcheckTimeout = 120
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
