--- a/dog-writer/frontend/railway.toml
+++ b/dog-writer/frontend/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "npm run preview -- --host 0.0.0.0 --port $PORT"
+startCommand = "npm run build && npx serve -s dist -l $PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 60
 
