--- a/dog-writer/frontend/package.json
+++ b/dog-writer/frontend/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-security": "^3.0.1",
     "globals": "^16.0.0",
+    "serve": "^14.2.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
