--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -29,4 +29,12 @@ aiohttp==3.10.11
 textstat==0.7.4
 
 # Performance monitoring (lightweight)
-psutil==6.1.0 
+psutil==6.1.0
+
+# Additional runtime dependencies
+posthog==4.10.0
+python-jose[cryptography]==3.4.0
+passlib[bcrypt]==1.7.4
+cryptography>=42.0.2
+redis==5.0.1
+slowapi==0.1.9 
