--- a/dog-writer/backend/requirements.txt
+++ b/dog-writer/backend/requirements.txt
@@ -8,8 +8,9 @@ python-dotenv==1.0.0
 PyJWT==2.8.0
 bcrypt==4.2.1
 
-# Input validation
+# Input validation and email
 bleach==6.2.0
+email-validator==2.1.1
 
 # HTTP requests
 requests==2.32.4
