feat: Migrate to unified PostgreSQL database architecture - Unified auth and document databases into single database - Added PostgreSQL support for production persistence on Railway - Maintained SQLite compatibility for local development - Fixed document creation issues by eliminating database separation - Resolves user data persistence issues between deployments

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,4 +38,7 @@ python-jose[cryptography]==3.4.0
 passlib[bcrypt]==1.7.4
 cryptography>=42.0.2
 redis==5.0.1
-slowapi==0.1.9 
+slowapi==0.1.9
+
+# For PostgreSQL support in production
+psycopg2-binary 
