--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,5 +40,10 @@ cryptography>=42.0.2
 redis==5.0.1
 slowapi==0.1.9
 
-# For PostgreSQL support in production
-psycopg2-binary 
+# PostgreSQL - Production Database (ONLY)
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+
+# Database connection pooling and utilities
+SQLAlchemy==2.0.23
+alembic==1.13.1 
