🧹 Final cleanup: Remove remaining SQLite database files and update frontend config

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,6 @@
 VITE_API_URL=https://backend-production-41ee.up.railway.app
+GEMINI_API_KEY=AIzaSyAxajmK_nZyxY0C7MP0IOz4_FaaXK0vVmY
+ANTHROPIC_API_KEY=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
+OPENAI_API_KEY=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
+GOOGLE_APPLICATION_CREDENTIAL=/Users/aahishsunar/Desktop/DOG/gostt.json
+ELEVENLABS_API_KEY=sk_a09213b77be6273aad008d8735e80b817ba10de398c06125
