--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ bcrypt==4.2.1
 
 # Input validation and email
 bleach==6.2.0
+webencodings==0.5.1
+html5lib==1.1
 email-validator==2.2.0
 
 # HTTP requests
@@ -17,7 +19,7 @@ requests==2.32.4
 
 # AI integrations (core only)
 openai>=1.35.0
-google-generativeai>=0.7.0
+google-generativeai>=0.8.5
 
 # Essential utilities
 aiofiles==23.2.1
@@ -46,3 +48,9 @@ asyncpg==0.29.0
 
 # Database connection pooling and utilities
 SQLAlchemy==2.0.23
+
+# Missing dependencies causing backend crash
+webencodings==0.5.1
+html5lib==1.1
+webencodings==0.5.1
+html5lib==1.1
