--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-security": "^3.0.1",
     "globals": "^16.0.0",
     "serve": "^14.2.4",
+    "terser": "^5.43.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
