--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,50 +1,35 @@
-# Core FastAPI dependencies - Railway Optimized
+# ============================================================================
+# DOG WRITER MVP - STREAMLINED REQUIREMENTS (Production Ready)
+# ============================================================================
+
+# Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.18
 python-dotenv==1.0.0
 
-# Essential Security (minimal set)
+# Authentication & Security
 PyJWT==2.8.0
 bcrypt==4.2.1
-
-# Input validation and email
-bleach==6.2.0
-webencodings==0.5.1
-html5lib==1.1
 email-validator==2.2.0
-
-# HTTP requests
-requests==2.32.4
-
-# AI integrations (core only)
-openai>=1.35.0
-google-generativeai>=0.8.5
-
-# Essential utilities
-aiofiles==23.2.1
-jinja2==3.1.6
-
-# Basic async support
-aiohttp==3.10.11
-
-# Minimal analytics
-textstat==0.7.4
-
-# Performance monitoring (lightweight)
-psutil==6.1.0
-
-# Additional runtime dependencies
-posthog==4.10.0
 python-jose[cryptography]==3.4.0
 passlib[bcrypt]==1.7.4
 cryptography>=42.0.2
-redis==5.0.1
-slowapi==0.1.9
 
-# PostgreSQL - Production Database (ONLY)
+# HTTP requests & async support
+requests==2.32.4
+aiohttp==3.10.11
+aiofiles==23.2.1
+
+# AI integrations (Core MVP features only)
+openai>=1.35.0
+google-generativeai>=0.8.5
+
+# Database (PostgreSQL only - production ready)
 psycopg2-binary==2.9.9
-asyncpg==0.29.0
 
-# Database connection pooling and utilities
-SQLAlchemy==2.0.23
+# Templating (for email/HTML if needed)
+jinja2==3.1.6
+
+# Performance monitoring (lightweight)
+psutil==6.1.0
