Railway deployment fixes and enhanced diagnostics
- Add hypercorn for dual-stack binding on Railway
- Enhanced error diagnostics in main.py startup
- Railway-specific configuration files (railway.toml, Procfile)
- Improved health endpoint with detailed troubleshooting
- Force deployment trigger for Railway rebuild
- Frontend API timeout and error handling improvements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@
 # Core FastAPI dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+hypercorn==0.16.0
 python-multipart==0.0.18
 python-dotenv==1.0.0
 
