🔧 CRITICAL FIX: Railway configuration issue causing startup failure
ROOT CAUSE IDENTIFIED:
- Railway was using DEVELOPMENT environment instead of PRODUCTION
- Development environment runs 'python main.py' (wrong)
- Production environment runs './start.sh' (correct)

FIXES APPLIED:
1. Fixed railway.toml - removed development environment confusion
2. Enhanced Procfile with debugging output to track startup process
3. Force Railway to use production configuration only

EXPECTED RESULT:
- Railway should now execute start.sh script properly
- Should see '🚨 NUCLEAR RESET' message in logs
- Backend should start hypercorn server on port 8080
- /api/health should become accessible

This fixes the issue where only JWT validation was logged but hypercorn never started.

--- a/railway.toml
+++ b/railway.toml
@@ -10,12 +10,10 @@ restartPolicyMaxRetries = 10
 [deploy.healthcheckPath]
 path = "/api/health"
 
+# FORCE PRODUCTION ENVIRONMENT - Always use start.sh script
 [environments.production]
-# Production environment - uses Railway environment variables
 startCommand = "cd backend && chmod +x start.sh && ./start.sh"
 buildCommand = "cd backend && pip install -r requirements.txt"
 
-[environments.development]
-# Development environment
-startCommand = "cd backend && python main.py"
-buildCommand = "cd backend && pip install -r requirements.txt" 
+# Remove development environment to prevent confusion
+# Railway should always use production configuration for deployment 
