Fix Railway deployment: pip command not found error
- Fixed nixpacks.toml configuration that was causing pip install to fail
- Removed custom build phase that ran pip before Python was installed
- Let nixpacks auto-detect Python from requirements.txt and runtime.txt
- Added Dockerfile as backup deployment method with proper Python setup
- Specified Python 3.11.9 version explicitly
- Added system dependencies (gcc, g++, libpq-dev) for package compilation

This resolves the 'pip: command not found' error during Railway builds.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,8 +1,8 @@
-[phases.build]
-cmds = ["pip install -r requirements.txt"]
+# Railway Python Configuration for DOG Writer Backend
+# Fixed to prevent "pip: command not found" errors
 
-[phases.install]
-cmds = ["chmod +x start.sh"]
+# Let nixpacks auto-detect Python based on requirements.txt and runtime.txt
+# Remove custom build phase that causes pip command not found
 
 [start]
 cmd = "./start.sh"
@@ -10,8 +10,8 @@ cmd = "./start.sh"
 [variables]
 PYTHONPATH = "/app"
 PORT = "8080"
+PYTHON_VERSION = "3.11.9"
 
-# Override Railway's auto-detection
+# Railway deployment optimizations
 [nixpacks]
-# Force Railway to use our start command instead of auto-detecting main.py
 app = "backend" 
