Add deployment debugging tools and simplified startup
- Add railway_deployment_debug.py for diagnosing deployment issues
- Create start_simple.sh with basic startup and diagnostics
- Update railway.toml and Procfile to use simplified startup
- Helps identify 502 errors and deployment failures
- Includes environment checks, import tests, and database connectivity tests

--- a/railway.toml
+++ b/railway.toml
@@ -10,9 +10,9 @@ restartPolicyMaxRetries = 10
 [deploy.healthcheckPath]
 path = "/api/health"
 
-# FORCE PRODUCTION ENVIRONMENT - Always use start.sh script
+# DEBUGGING MODE - Use simple startup script with diagnostics
 [environments.production]
-startCommand = "cd backend && chmod +x start.sh && ./start.sh"
+startCommand = "cd backend && chmod +x start_simple.sh && ./start_simple.sh"
 buildCommand = "cd backend && pip install -r requirements.txt"
 
 # Remove development environment to prevent confusion
