--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,3 +41,10 @@ jinja2==3.1.6
 # Performance monitoring (lightweight)
 psutil==6.1.0
 redis==5.0.1
+
+# Document indexing and knowledge graph dependencies
+chromadb==0.4.22
+sentence-transformers==2.3.1
+networkx==3.2.1
+spacy==3.7.2
+# Note: Run `python -m spacy download en_core_web_sm` after installation
