--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -25,6 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.44.2",
+    "@rollup/rollup-linux-x64-musl": "^4.44.2",
     "@types/node": "^22.10.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
