--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,7 +40,6 @@ jinja2==3.1.6
 
 # Performance monitoring (lightweight)
 psutil==6.1.0
-redis==5.0.1
 
 # Document indexing and knowledge graph dependencies
 chromadb==0.4.22
@@ -48,3 +47,12 @@ sentence-transformers==2.3.1
 networkx==3.2.1
 spacy==3.7.2
 # Note: Run `python -m spacy download en_core_web_sm` after installation
+
+# TinyStyler dependencies for character voice consistency
+torch>=1.11.0
+transformers>=4.41.0
+sentencepiece>=0.1.99
+einops>=0.7.0
+huggingface-hub>=0.20.0
+# For TinyStyler's mutual implication score
+mutual-implication-score>=0.1.0
