fix: Update mutual-implication-score version to fix deployment
The package only has version 0.0.0 available, not >=0.1.0. This fixes the Railway deployment error.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -55,4 +55,4 @@ sentencepiece>=0.1.99
 einops>=0.7.0
 huggingface-hub>=0.20.0
 # For TinyStyler's mutual implication score
-mutual-implication-score>=0.1.0
+mutual-implication-score==0.0.0
