ENHANCE: Voice analysis timeout and error handling improvements
✅ FIXES IMPLEMENTED:

1. TIMEOUT IMPROVEMENTS:
   - Increased frontend timeout to 60 seconds for voice analysis
   - Increased Gemini backend timeout to 45 seconds
   - Special handling for /character-voice/analyze endpoint

2. PROGRESS INDICATORS:
   - Added console messages showing processing status
   - Clear indication when Gemini AI is processing (30-60 seconds)
   - Progress tracking with attempt numbers and timing

3. ERROR HANDLING ENHANCEMENTS:
   - Specific error messages for timeouts vs server errors
   - Better retry logic with exponential backoff
   - Clear guidance for users on timeout issues

4. LOGGING IMPROVEMENTS:
   - Frontend shows processing time and backend response details
   - Backend shows prompt length and processing status
   - Better error categorization (timeout/network/server)

EXPECTED RESULTS:
✅ Voice analysis will wait up to 60 seconds for Gemini processing
✅ Users see clear progress messages in console
✅ Better error messages guide users on what to do
✅ Retry logic handles temporary failures gracefully

--- a/railway.toml
+++ b/railway.toml
@@ -10,10 +10,7 @@ restartPolicyMaxRetries = 10
 [deploy.healthcheckPath]
 path = "/api/health"
 
-# DEBUGGING MODE - Use simple startup script with diagnostics
+# PRODUCTION MODE - Direct server startup
 [environments.production]
-startCommand = "cd backend && chmod +x start_simple.sh && ./start_simple.sh"
-buildCommand = "cd backend && pip install -r requirements.txt"
-
-# Remove development environment to prevent confusion
-# Railway should always use production configuration for deployment 
+startCommand = "cd backend && chmod +x start.sh && ./start.sh"
+buildCommand = "cd backend && pip install -r requirements.txt" 
