--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,6 +41,9 @@ jinja2==3.1.6
 # Performance monitoring (lightweight)
 psutil==6.1.0
 
+# Core ML/Scientific Computing (required by multiple services)
+numpy>=1.24.0
+
 # Document indexing and knowledge graph dependencies
 chromadb==0.4.22
 sentence-transformers==2.3.1
