--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,13 @@ openai>=1.35.0
 # This version is known to work well with Railway's Python environment
 google-generativeai==0.7.2
 
+# HuggingFace for direct model loading and inference
+transformers>=4.36.0
+huggingface-hub>=0.19.0
+torch>=2.0.0
+accelerate>=0.24.0
+bitsandbytes>=0.41.0  # For model quantization
+
 # Database (PostgreSQL only - production ready)
 psycopg2-binary==2.9.9
 
