--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,6 @@ coverage/
 backend/.env
 backend/.env.example
 .env.example
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
