--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,7 +30,7 @@ openai>=1.35.0
 google-generativeai==0.7.2
 
 # HuggingFace for direct model loading and inference
-transformers>=4.36.0
+transformers==4.50.0
 huggingface-hub>=0.19.0
 torch>=2.0.0
 accelerate>=0.24.0
