--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
